<resources>
    <string name="app_name">BN</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="home_detail_screen">Home Detail Screen</string>
    <string name="dashboard_detail_screen">Dashboard Detail Screen</string>
    <string name="notification_detail">Notification Detail Screen</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_detail">Home Detail</string>
    <string name="dashboard_detail">Dashboard Detail</string>
</resources>